--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -30,4 +30,8 @@
 
     <dimen name="color_grid_extra_padding">32dp</dimen>
     <dimen name="color_grid_item_size">48dp</dimen>
+
+    <dimen name="showcase_radius">47dp</dimen>
+    <dimen name="showcase_radius_inner">48dp</dimen>
+    <dimen name="showcase_radius_outer">64dp</dimen>
 </resources>
