--- a/res/xml/preferences_sms_mms.xml
+++ b/res/xml/preferences_sms_mms.xml
@@ -41,6 +41,14 @@
                         android:title="@string/preferences__support_wifi_calling"
                         android:summary="@string/preferences__enable_if_your_device_supports_sms_mms_delivery_over_wifi"/>
 
+    <org.smssecure.smssecure.components.SliderPreferenceCompat
+        android:defaultValue="220"
+        android:max="1000"
+        android:key="pref_mms_size"
+        android:title="@string/preferences__mms_size"
+        android:summary="@string/preferences__preferences_mms_size_disc"
+        />
+
     <Preference android:key="pref_mms_preferences"
                 android:title="@string/preferences__advanced_mms_access_point_names"/>
 
