--- a/res/xml/preferences_advanced.xml
+++ b/res/xml/preferences_advanced.xml
@@ -20,7 +20,7 @@
                         android:summary="@string/preferences__automatically_complete_key_exchanges_for_new_sessions_or_for_existing_sessions_with_the_same_identity_key" />
 
     <org.smssecure.smssecure.components.SwitchPreferenceCompat
-                        android:defaultValue="false"
+                        android:defaultValue="true"
                         android:key="pref_experimental_multipartmms_file"
                         android:title="@string/pref_experimental_multipartmms_file_title"
                         android:summary="@string/pref_experimental_multipartmms_file_summary" />
