--- a/res/values/attrs.xml
+++ b/res/values/attrs.xml
@@ -40,6 +40,7 @@
     <attr name="conversation_attach_video" format="reference"/>
     <attr name="conversation_attach_sound" format="reference"/>
     <attr name="conversation_attach_contact_info" format="reference"/>
+    <attr name="conversation_attach_file" format="reference"/>
     <attr name="conversation_attach" format="reference"/>
 
     <attr name="emoji_tab_strip_background" format="color" />
