--- a/res/values/themes.xml
+++ b/res/values/themes.xml
@@ -117,6 +117,7 @@
         <item name="conversation_attach_sound">@drawable/ic_volume_up_light</item>
         <item name="conversation_attach_contact_info">@drawable/ic_account_box_light</item>
         <item name="conversation_attach">@drawable/ic_attach_grey600_24dp</item>
+        <item name="conversation_attach_file">@drawable/ic_file_attachment_light</item>
 
         <item name="emoji_tab_strip_background">@color/gray12</item>
         <item name="emoji_tab_indicator">#66555555</item>
@@ -249,6 +250,7 @@
         <item name="conversation_attach_sound">@drawable/ic_volume_up_dark</item>
         <item name="conversation_attach_contact_info">@drawable/ic_account_box_dark</item>
         <item name="conversation_attach">@drawable/ic_attach_white_24dp</item>
+        <item name="conversation_attach_file">@drawable/ic_file_attachment_dark</item>
 
         <item name="emoji_tab_strip_background">@color/gray95</item>
         <item name="emoji_tab_indicator">@color/gray65</item>
